# DART_AUTOAIM

./: .clocignore  .gitignore  README.md
armor_detector/: CMakeLists.txt
armor_detector/include/: ArmorDetection.hpp  LatestChannel.hpp  LocalCam.hpp
armor_detector/include/camera/: CamWrapper.h
armor_detector/include/utils/: Semaphore.hpp  logging.hpp
armor_detector/src/: main.cc
armor_detector/src/camera/: CamWrapper.cpp
ros_ws/: config.toml
ros_ws/src/aim_algo/: CMakeLists.txt  package.xml
ros_ws/src/aim_algo/include/: config_parser.hpp  detector.hpp  kalman.hpp
ros_ws/src/aim_algo/include/camera/: CamGeo.hpp  CamNode.hpp  CamWrapper.h  CamWrapperDH.h  DxImageProc.h  GxIAPI.h
ros_ws/src/aim_algo/include/contact/: Checksum.h  CommPort.h  Contact.h  Protocol.h  pid.h
ros_ws/src/aim_algo/include/kalman/: kalman.hpp  kalman_delay_aware.hpp
ros_ws/src/aim_algo/include/tui/: SPSCQueue.hpp  Terminal.hpp  Tui.hpp  Window.hpp
ros_ws/src/aim_algo/include/utils/: logging.hpp
ros_ws/src/aim_algo/src/: cv_utils.cc  detector.cc  kalman.cc  main.cc  main_.cc
ros_ws/src/aim_algo/src/camera/: CamGeo.cc  CamNode.cc  CamWrapper.cpp  CamWrapper_node.cpp
ros_ws/src/aim_algo/src/contact/: Checksum.cc  CommPort.cc  Contact.cc  readtoml.cc
ros_ws/src/camera/: CMakeLists.txt  README.md  package.xml
ros_ws/src/camera/config/: config.txt
ros_ws/src/camera/include/: ._Camera  config.hpp
ros_ws/src/camera/launch/: camera.launch.py
ros_ws/src/camera/src/: CamWrapper.cpp  CamWrapper_node.cpp  CamWrapper_node_.cpp  CapturePub.h  camera.cpp  xinerCAM.h  xinerROS.h
temp_ui/: CMakeLists.txt  README.md
temp_ui/include/: CommandWindow.hpp  LatestChannel.hpp  SPSCQueue.hpp  Terminal.hpp  Tui.hpp  Window.hpp
temp_ui/src/: main.cc
yolo8_prototype/src/: convert.py  train.py
